--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,14 @@
-/*  your css code here. If applicable */
+.cards{
+	display:flex;
+	flex-direction:row;
+	flex-wrap:wrap;
+	align-items:flex-end;
+	justify-content:center;
+	
+}
+.cards img {
+  margin: 10px; /* Margin between images */
+  border: 3px solid #000;
+  box-shadow: 3px 3px 8px 0px rgba(0, 0, 0, 0.3);
+  max-width: 25vw;
+}
